--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "element-ui": "^2.15.1",
     "axios": "^0.24.0",
     "chess.js": "^0.12.0",
     "core-js": "^3.6.5",
